change text, fix spacing

--- a/src/sass/pages/static.scss
+++ b/src/sass/pages/static.scss
@@ -32,11 +32,17 @@
         white-space: pre;
         padding: 18px;
     }
-    .faded {
-        color: #AFAFAF;
-        font-size: 95%;
-    }
-    .grd-grid-hide {
-        padding: 0;
+    .payment-agent-content {
+        .faded {
+            color: #AFAFAF;
+            font-size: 95%;
+            margin-bottom: 0;
+        }
+        .grd-grid-hide {
+            padding: 0;
+        }
+        .h1 {
+            margin-bottom: 40px;
+        }
     }
 }
